# rae

./: .gitignore  .lintr  README.md  development.R  pyproject.toml  taskrunner.R
doc/: figures.csv  figures.md  tables.csv  tables.md
renv/: activate.R
result/desc/: des.tex  desc.csv  desc.xlsx
result/kstest/: vital_stat_month.csv
result/questionare/: memo  questionare.xlsx  questionare_input.tex  questionare_noncog.tex  questionare_strategy.tex  ref.bib
result/t0/: ra_corr_cog_noncog_short.tex  summary.xlsx  summary_glance.csv  summary_tidy.csv  t0_ra_corr_cog_noncog.tex
result/t14/: summary.xlsx  summary_.xlsx  summary_glance.csv  summary_stat.csv  summary_tidy.csv  t14.tex
result/t14_rr/: summary.xlsx  summary_glance.csv
result/t17/: summary.xlsx  summary_glance2.csv  summary_tidy2.csv
result/t19/: summary.xlsx  summary_glance.csv  summary_tidy.csv  t19_ra_public_assist.tex  t19_ra_public_assist_inputs_relations.tex
result/t22/: boot_item.csv  summary.xlsx  summary_boot.csv  summary_glance.csv  summary_tidy.csv
result/t24/: summary.xlsx  summary_.xlsx  summary_glance.csv  summary_tidy.csv
src/: analysis.R  analysis_component.R  config.yaml  data_download.R  lib.R  rdd.R  regression_function.R  setting.R  setting.py
table/: questionare2.tex  questionare_input.tex  questionare_noncog.tex  questionare_strategy.tex
task/: des.py  fig2.py  fig3.py  fig4.py  kstest.py  t0.R  t0_ra.R  t14.R  t14_rr.R  t17.R  t17_ra.R  t19.R  t19_ra.R  t22.R  t24.R  t25.R  t28.R  t3.R  t33.py  t34_tmp.R  t35.R  t36.R  t3_ra.R  t6.R  t6_ra.R  t8.R  t8_ra.R
(+63 files in other folders)
