[tool.poetry]
name = "rae"
version = "0.1.0"
description = ""
authors = ["HirotakeIto <itouhrtk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.1"
datatable = "^0.11.1"
matplotlib = "^3.3.3"
seaborn = "^0.11.1"
scipy = "^1.6.0"
ipython = "7.10.0"
pyyaml = "^5.4.1"
addict = "^2.4.0"
jedi = "0.17.2"
parso = "0.7.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
